// protoc --go_out=internal/infrastructure/client/moderationclient/. --go-grpc_out=internal/infrastructure/client/moderationclient/. internal/infrastructure/client/moderationclient/proto/moderation.proto

syntax = "proto3";

package moderationclient;
option go_package = ".;moderationclient";

message ModerateContentRequest {
    string content = 1;
}

message ModerateContentResponse {
    ModerationResult result = 1;
    string error = 2;
}

message ModerationResult {
    bool allowed = 1;
    repeated string categories = 2;
}

service ModerationService {
    rpc ModerateContent(ModerateContentRequest) returns (ModerateContentResponse);
}
